--- a/lista_pruebas/makefile
+++ b/lista_pruebas/makefile
@@ -1,11 +1,11 @@
-VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2 --show-leak-kinds=all --trace-children=yes
+VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2 --show-leak-kinds=all --trace-children=yes -s
 CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2
 CC = gcc
 
 all: 64
 
 64:
-	$(CC) $(CFLAGS) src/*.c pruebas_chanutron-x86_64.o -o pruebas_chanutron
+	$(CC) $(CFLAGS) src/*.c pruebas_chanutron-x86_64-PIE.o -o pruebas_chanutron
 	valgrind $(VALGRIND_FLAGS) ./pruebas_chanutron 2>&1
 
 32:
